# skillpool

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.zh-CN.md  console-common.ps1  console-status.cmd  console-status.ps1  console-status.sh  create-desktop-shortcut.cmd  create-desktop-shortcut.ps1  open-console.cmd  open-console.ps1  open-console.sh  pyproject.toml  skillpool.cmd  skillpool.py  stop-console.cmd  stop-console.ps1  stop-console.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
docs/: FEATURES.zh-CN.md  MAINTAINER_GUIDE.zh-CN.md  MAINTENANCE_DOSSIER.zh-CN.md  OPEN_SOURCE_ROADMAP.zh-CN.md  OPERATIONS_MANUAL.zh-CN.md  SYNC_GUIDE.zh-CN.md
examples/: clients.example.json  environment.example.ps1
plugins/importers/: README.md
skillpool_app/: cli.py  core.py  importer_plugins.py  mixin_console.py  mixin_import.py  mixin_inventory.py  mixin_mcp.py  mixin_publish.py  mixin_scan.py  mixin_state.py  mixin_sync.py  web.py
skillpool_app/ui/: app-core.js  app-dash.js  app-forms.js  app-init.js  app-nav.js  app-views-a.js  app-views-b.js  app.js  index.html  styles.css
tests/: test_skillpool.py
