[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skillpool"
version = "0.1.0"
description = "Cross-client AI skill pool manager"
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
skillpool = "skillpool_app.cli:main"

[tool.setuptools.packages.find]
include = ["skillpool_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
